--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10"
+    "eslint-config-next": "13.4.10",
+    "typescript": "^5.1.6"
   }
 }
